[gd_scene load_steps=2 format=3 uid="uid://bor8i0t3t21x8"]

[ext_resource type="Script" uid="uid://oh01dko6tk5v" path="res://ManagerNodes/ProjectProgressManager/project_progress_manager.gd" id="1_grspk"]

[node name="ProjectProgressManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_grspk")
progress = 100

[node name="ProgressBar" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 50.0
offset_right = 800.0
offset_bottom = 90.0
color = Color(0.4627451, 1, 0.42745098, 1)

[node name="ProgressLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 275.0
offset_right = 675.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 40
fit_content = true
